Mensaje descriptivo del cambio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Simulador de préstamos para calcular tus cuotas mensuales y determinar tu capacidad de pago.">
     <meta name="keywords" content="préstamos, simulador, cuotas, capacidad de pago, interés">
     <meta name="author" content="Tu Nombre">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/estilos.css"> <!-- Enlace al CSS compilado -->
 </head>
 <body>
     <!-- Cabecera con el título de la página -->
